feat: finish home page and start post page

--- a/src/components/ui/Article/ArticleRoot/styles.module.css
+++ b/src/components/ui/Article/ArticleRoot/styles.module.css
@@ -1,8 +1,17 @@
 
 .articleWrapper {
+  display: block;
   padding: 2rem;
   background-color: var(--zinc-600);
   border-radius: var(--rounded-xl);
 
   height: 16.25rem;
+
+  text-decoration: none;
+  color: var(--zinc-150);
+
+  &:focus,
+  &:hover {
+    outline: 2px solid var(--zinc-400);
+  }
 }
