--- a/src/pages/Home/styles.module.css
+++ b/src/pages/Home/styles.module.css
@@ -2,3 +2,8 @@
   position: relative;
   top: calc(-13.25rem / 2); /* 13.25rem is a card height*/
 }
+
+.articlesSection {
+  margin-top: 3rem;
+  margin-bottom: 6rem;
+}
