--- a/src/components/ui/Article/ArticleTitle/styles.module.css
+++ b/src/components/ui/Article/ArticleTitle/styles.module.css
@@ -1,10 +1,17 @@
-.titleWarpper {
+.titleWrapper {
+  margin-bottom: 1.25rem;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  color: var(--zinc-200);
 }
 
-.titleWarpper h1,
-.titleWarpper h2,
-.titleWarpper h3,
-.titleWarpper h4,
-.titleWarpper h5 {
+.titleWrapper h1,
+.titleWrapper h2,
+.titleWrapper h3,
+.titleWrapper h4,
+.titleWrapper h5 {
   font-size: 1.25rem;
 }
