--- a/src/components/ui/Card/CardGroupContent/styles.module.css
+++ b/src/components/ui/Card/CardGroupContent/styles.module.css
@@ -1,6 +1,6 @@
 .groupContentWrapper {
-  height: 148px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  width: 100%;
 }
